# exoskelton

./: .bandit  .coveragerc  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mypy.ini  pyproject.toml
scripts/: tests.sh
src/exoskelton/: local.py  plugin_base.py  plugin_loader.py  remote_debug.py  run.py  slack_argparser.py  slack_event_context.py
src/exoskelton/plugins/hello/: hello.py
tests/: plugin_base_test.py
